--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ ol {
 }
 
 .content__list-container {
-  height: 534px;
+  height: 298px;
   overflow: auto;
 }
 
@@ -79,4 +79,44 @@ ol {
 
 .title {
   margin-bottom: 26px;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+  object-fit: contain;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+}
+
+.content__video-card-thumbnail {
+  min-width: 194px;
+  height: 103px;
+  object-fit: contain;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
 }
