--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,7 @@ ol {
 }
 
 .search-form__fieldset-title {
+  font-family: Fira Sans Condensed, sans-serif;
   font-weight: 400;
   font-size: 18px;
   margin-bottom: 5px;
@@ -195,6 +196,7 @@ line-height: 0.9;
 }
 
 .search-form__textfield {
+  font-family: Fira Sans Condensed, sans-serif;
   font-size: 18px;
   border-top: 1px solid #fff;
   border-right: none;
@@ -231,4 +233,41 @@ line-height: 0.9;
 
 .search-form__checkbox-list .search-form__label:hover {
 text-decoration: underline;
+}
+
+.button {
+  border: 1px solid #fff;
+  font-family: Fira Sans Condensed, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+  background-color: transparent;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  min-height: 34px;
+  align-self: flex-end;
+}
+
+.more-button {
+  width: 100%;
+  min-height: 34px;
 }
