--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,31 @@ ol {
 .content__card-link {
   text-decoration: none;
   color: #FFFFFF;
+  display: block;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link_current {
+  background-color: transparent;
+}
+
+.content__list-item {
+  padding: 0 3px;
 }
 
 .content__video-card-title {
@@ -185,8 +210,7 @@ line-height: 0.9;
   gap: 5px;
 }
 
-.search-form__textfield:focus,
-.search-form__checkbox:focus {
+.search-form__label:has(:focus) {
   outline: none;
 }
 
