--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,7 @@ ol {
   text-decoration: none;
   color: #FFFFFF;
   display: block;
+  cursor: pointer;
 }
 
 .content__card-link:active {
@@ -208,6 +209,7 @@ line-height: 0.9;
   align-items: center;
   width: fit-content;
   gap: 5px;
+  cursor: pointer;
 }
 
 .search-form__label:has(:focus) {
@@ -266,6 +268,7 @@ text-decoration: underline;
   font-size: 18px;
   color: #fff;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .button:hover {
