--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,7 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  gap: 40px;
 }
 
 .content__list-container {
@@ -83,14 +84,13 @@ ol {
 
 .result__video-container {
   width: 711px;
-  height: 386px;
   margin-bottom: 16px;
-  object-fit: contain;
+  object-fit: cover;
+  position: relative;
 }
 
 .result__video {
   width: 100%;
-  height: 100%;
 }
 
 .content__list {
@@ -103,6 +103,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  position: relative;
 }
 
 .content__video-card {
@@ -113,7 +114,7 @@ ol {
 .content__video-card-thumbnail {
   min-width: 194px;
   height: 103px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -129,7 +130,7 @@ ol {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 0.94;
@@ -165,24 +166,29 @@ ol {
 }
 
 .content__card-link_current {
-  background-color: transparent;
-}
-
-.content__list-item {
-  padding: 0 3px;
+  background-color: #545050;
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   text-transform: uppercase;
-  /* Задать свойство line-clamp */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .content__video-card-description {
-line-height: 0.9;
-/* Задать свойство line-clamp */
+  font-family: Fira Sans Condensed, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 0.9;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .visually-hidden {
@@ -231,10 +237,13 @@ line-height: 0.9;
   color: #fff;
   background-color: transparent;
   appearance: none;
+  width: 225px;
 }
 
 .search-form__textfield::placeholder {
   color: rgb(255 255 255 / 0.7);
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
 }
 
 .search-form__pseudo-checkbox {
