--- a/styles/style.css
+++ b/styles/style.css
@@ -84,13 +84,16 @@ ol {
 
 .result__video-container {
   width: 711px;
+  height: 386px;
   margin-bottom: 16px;
-  object-fit: cover;
   position: relative;
 }
 
 .result__video {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__list {
@@ -173,10 +176,15 @@ ol {
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
+  max-width: 196px;
   text-transform: uppercase;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
@@ -230,6 +238,7 @@ ol {
 .search-form__textfield {
   font-family: Fira Sans Condensed, sans-serif;
   font-size: 18px;
+  font-weight: 400;
   border-top: 1px solid #fff;
   border-right: none;
   border-bottom: 1px solid #fff;
@@ -242,8 +251,6 @@ ol {
 
 .search-form__textfield::placeholder {
   color: rgb(255 255 255 / 0.7);
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
 }
 
 .search-form__pseudo-checkbox {
@@ -267,7 +274,9 @@ ol {
 }
 
 .search-form__checkbox-list .search-form__label:hover {
-text-decoration: underline;
+  .search-form__label-text {
+    text-decoration: underline;
+  }
 }
 
 .button {
@@ -276,6 +285,7 @@ text-decoration: underline;
   font-weight: 700;
   font-size: 18px;
   color: #fff;
+  min-height: 34px;
   background-color: transparent;
   cursor: pointer;
 }
@@ -288,7 +298,7 @@ text-decoration: underline;
   background-color: #545050;
 }
 
-.button:focus-visible {
+.button:focus {
   outline: none;
 }
 
@@ -298,12 +308,10 @@ text-decoration: underline;
 }
 
 .search-form__submit-button {
-  width: 194px;
-  min-height: 34px;
+  min-width: 194px;
   align-self: flex-end;
 }
 
 .more-button {
   width: 100%;
-  min-height: 34px;
 }
